main/default/objects/Contact_Availability__c/Contact_Availability__c.object-meta.xml
<CustomObject>
    <label>Contact Availability</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Contact Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>