main/default/objects/Contact_Availability__c/fields/ContactStartTime__c.field-meta.xml
<CustomField>
    <fullName>ContactStartTime__c</fullName>
    <formula>Contact__c +  TEXT(Start_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactStartTime</label>
    <type>Text</type>
</CustomField>