main/default/objects/Contact_Availability__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF(AND(!ISBLANK(Start_Date_Time__c),!ISBLANK(End_Date_Time__c)),
(End_Date_Time__c-Start_Date_Time__c) * 24 *60,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>