main/default/objects/Contact_Availability__c/fields/Duration_minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_minutes__c</fullName>
    <formula>IF(AND(!ISBLANK(Start_Date_Time__c),!ISBLANK(End_Date_Time__c)),
TEXT(ROUND((End_Date_Time__c-Start_Date_Time__c) * 24 *60,0) ) &amp; &apos; minutes&apos;,
&apos;0 minutes&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (minutes)</label>
    <type>Text</type>
</CustomField>