main/default/objects/Contact_Availability__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <formula>TEXT(HOUR(TIMEVALUE(Start_Date_Time__c))-5) + &apos;:00&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time</label>
    <type>Text</type>
</CustomField>