main/default/objects/Contact_Availability__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>CASE(TeleMeet__r.Status__c,
&apos;Draft&apos;,&apos;Booking In Progress&apos;,
&apos;Scheduled&apos;,&apos;Scheduled&apos;,
&apos;Completed&apos;,&apos;Completed&apos;,
&apos;Open&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>