main/default/objects/Contact_Availability__c/fields/TeleMeet__c.field-meta.xml
<CustomField>
    <fullName>TeleMeet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connect</label>
    <referenceTo>TeleMeet__c</referenceTo>
    <relationshipLabel>Contact Availabilities</relationshipLabel>
    <relationshipName>Contact_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>